Prevent crash on addition of color to deleted palette with colorpicker

This commit makes the deletion and addition of palette
in palette docker show in colorpicker's tool options'
Add to palette comboBox. This also prevents a crash
due to a dangling pointer due to palette pointing to
deleted memory location.

BUG:413548